WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203945
WebDriver: correctly handle errors when focusing element before sending key events
https://bugs.webkit.org/show_bug.cgi?id=203945
Summary
WebDriver: correctly handle errors when focusing element before sending key e...
Carlos Garcia Campos
Reported
2019-11-07 01:29:55 PST
We are throwing an exception that is not correctly handled. This causes the following tests to fail: imported/w3c/webdriver/tests/element_send_keys/interactability.py::test_not_a_focusable_element imported/w3c/webdriver/tests/element_send_keys/interactability.py::test_display_none imported/w3c/webdriver/tests/element_send_keys/interactability.py::test_visibility_hidden imported/w3c/webdriver/tests/element_send_keys/interactability.py::test_hidden imported/w3c/webdriver/tests/element_send_keys/interactability.py::test_disabled
Attachments
Patch
(6.07 KB, patch)
2019-11-07 01:33 PST
,
Carlos Garcia Campos
clopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2019-11-07 01:33:58 PST
Created
attachment 383031
[details]
Patch
Carlos Garcia Campos
Comment 2
2019-11-07 04:09:19 PST
Committed
r252180
: <
https://trac.webkit.org/changeset/252180
>
Radar WebKit Bug Importer
Comment 3
2019-11-07 04:10:18 PST
<
rdar://problem/56978468
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug