WebDriver: correctly handle errors when focusing element before sending key events https://bugs.webkit.org/show_bug.cgi?id=203945

Reviewed by Carlos Alberto Lopez Perez.

Source/WebDriver:

We are throwing an exception that is not correctly handled.

Fixes: imported/w3c/webdriver/tests/element_send_keys/interactability.py::test_not_a_focusable_element
       imported/w3c/webdriver/tests/element_send_keys/interactability.py::test_display_none
       imported/w3c/webdriver/tests/element_send_keys/interactability.py::test_visibility_hidden
       imported/w3c/webdriver/tests/element_send_keys/interactability.py::test_hidden
       imported/w3c/webdriver/tests/element_send_keys/interactability.py::test_disabled

* Session.cpp:
(WebDriver::Session::elementSendKeys): Raise ElementNotInteractable error when element is not focusable.

Source/WebKit:

Handle ElementNotInteractable JavaScript exception to generate the appropriate Automation error.

* WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::WebAutomationSessionProxy::evaluateJavaScriptFunction):

WebDriverTests:

Remove expectations for tests that are now passing.

* TestExpectations.json:

Canonical link: https://commits.webkit.org/217284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252180 268f45cc-cd09-0410-ab3c-d52691b4dbfc